--- a/BookingSystem/BookingSystem/BookingSystem.csproj
+++ b/BookingSystem/BookingSystem/BookingSystem.csproj
@@ -47,15 +47,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Book.cs" />
+    <Compile Include="Booking.cs" />
     <Compile Include="Customercs.cs" />
+    <Compile Include="Employee.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Library.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rack.cs" />
+    <Compile Include="Section.cs" />
+    <Compile Include="Shelf.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
