--- a/BookingSystem/BookingSystem/BookingSystem.csproj
+++ b/BookingSystem/BookingSystem/BookingSystem.csproj
@@ -48,7 +48,7 @@
   <ItemGroup>
     <Compile Include="Book.cs" />
     <Compile Include="Booking.cs" />
-    <Compile Include="Customercs.cs" />
+    <Compile Include="Customer.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
