--- a/BookingSystem/BookingSystem/BookingSystem.csproj
+++ b/BookingSystem/BookingSystem/BookingSystem.csproj
@@ -79,9 +79,7 @@
     <Compile Include="Customer.cs" />
     <Compile Include="DAL.cs" />
     <Compile Include="Employee.cs" />
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Form1.cs" />
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
